--- a/invoices/SAPUI5/webapp/view/App.view.xml
+++ b/invoices/SAPUI5/webapp/view/App.view.xml
@@ -1,8 +1,15 @@
 <mvc:View controllerName="logali.SAPUI5.controller.App"
-          xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-    <Button text="{i18n>showHelloButtonText}" press=".onShowHello"></Button>
-    <Input value="{/recipient/name}"  
-        description="Hello {/recipient/name}" 
-        valueLiveUpdate="true"
-        width="60%"></Input>
+          xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc"
+          displayBlock="true">
+    <Shell>
+        <App>
+            <pages> 
+                <Page title="{i18n>appTitle}"> 
+                    <content> 
+                        <mvc:XMLView viewName="logali.SAPUI5.view.HelloPanel" />
+                    </content> 
+                </Page>
+            </pages>
+        </App>
+    </Shell>
 </mvc:View>
